[gd_scene load_steps=11 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/ARCADECLASSIC.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Planets/Planet_small.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/PlayerTitle.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 0.466667, 0.466667, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0.188235, 0.231373, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.945098, 0.94902, 0.854902, 1 )

[sub_resource type="Theme" id=4]
Button/fonts/font = SubResource( 6 )
Button/styles/hover = SubResource( 7 )
Button/styles/normal = SubResource( 8 )
Button/styles/pressed = null

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 0.466667, 0.466667, 1 )

[sub_resource type="DynamicFont" id=9]
size = 64
font_data = ExtResource( 2 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -17.0
margin_bottom = -17.0
script = ExtResource( 1 )

[node name="Planet2" parent="." instance=ExtResource( 3 )]
position = Vector2( 512, 388 )
z_index = -10

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 507, 161 )
z_index = -10

[node name="Node2D" type="Node2D" parent="."]
z_index = -3

[node name="VBoxContainer" type="VBoxContainer" parent="Node2D"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 412.0
margin_top = 275.0
margin_right = 612.0
margin_bottom = 487.0

[node name="Start" type="Button" parent="Node2D/VBoxContainer"]
margin_right = 200.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
mouse_filter = 2
theme = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
text = " Start"

[node name="Info" type="Button" parent="Node2D/VBoxContainer"]
margin_top = 54.0
margin_right = 200.0
margin_bottom = 104.0
rect_min_size = Vector2( 200, 50 )
mouse_filter = 2
theme = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
text = " Rules"

[node name="About" type="Button" parent="Node2D/VBoxContainer"]
margin_top = 108.0
margin_right = 200.0
margin_bottom = 158.0
rect_min_size = Vector2( 200, 50 )
mouse_filter = 2
theme = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
text = " About"

[node name="Quit" type="Button" parent="Node2D/VBoxContainer"]
margin_top = 162.0
margin_right = 200.0
margin_bottom = 212.0
rect_min_size = Vector2( 200, 50 )
mouse_filter = 2
theme = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
text = " Quit"

[node name="HBoxContainer" type="HBoxContainer" parent="Node2D"]
margin_top = 16.0
margin_right = 1024.0
margin_bottom = 200.0
alignment = 1

[node name="Label" type="Label" parent="Node2D/HBoxContainer"]
margin_left = 354.0
margin_top = 25.0
margin_right = 669.0
margin_bottom = 158.0
custom_colors/font_color = Color( 1, 0.466667, 0.466667, 1 )
custom_fonts/font = SubResource( 9 )
text = "ShipShape
Escape"
align = 1
valign = 1

[connection signal="pressed" from="Node2D/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Node2D/VBoxContainer/Info" to="." method="_on_Info_pressed"]
[connection signal="pressed" from="Node2D/VBoxContainer/About" to="." method="_on_About_pressed"]
[connection signal="pressed" from="Node2D/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
